add interviews under a job

--- a/src/app/components/main-layout/main-layout.component.scss
+++ b/src/app/components/main-layout/main-layout.component.scss
@@ -289,7 +289,7 @@ a.help-link{
   text-indent: 15px !important;
   padding: 5px;
  
-  background-color: #a8a9aa !important;
+  background-color: #eaeaea !important;
 }
 .settings_child{
   font-size: 13pt;
