--- a/src/app/exams/config-exams/config-exams.component.html
+++ b/src/app/exams/config-exams/config-exams.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="col-md-6">
         <button (click)="createExam($event, 'create')"
-        mat-raised-button class="new_question btn-action pull-right"> <span class="fa
+        mat-raised-button class="new_question btn-actions pull-right"> <span class="fa
             fa-plus"></span> Exam</button>
     </div>
     <div class="col-md-12">
