--- a/src/app/jobs/jobs-list/jobs-list.component.html
+++ b/src/app/jobs/jobs-list/jobs-list.component.html
@@ -1,18 +1,24 @@
-<div class="row">
-
-    <div class="col-md-12 right-partition">
+<div class="container">
+    <div class="row">
+     <div class="col-md-6">
         <div class="text-top">
             <h3> <b>Jobs</b></h3>
-            <!-- <small>create and remove interviewee</small> -->
-            <!-- <button (click)="openIntervieweesDialog($event, 'create')"
-                mat-raised-button class="btn-default pull-right
-                create-panelist"><span class="fa fa-plus"></span> Add
-                Interviewee</button> -->
-                      
+            <small>create and remove Jobs</small> 
+            <br>
         </div>
-        <div class="mat-elevation-z1">
-            <ng2-smart-table [settings]="settings" [source]="jobs"
-                (custom)="onCustomAction($event)"></ng2-smart-table>
+     </div>
+    <div class="col-md-6">
+        <button (click)="editJob($event, 'create')" mat-raised-button class="btn-action btn-default pull-right
+        create-panelist"><span class="fa fa-plus"></span> Add
+            Job</button>
+    </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 right-partition">
+            <div class="mat-elevation-z1">
+                <ng2-smart-table [settings]="settings" [source]="jobs" (custom)="onCustomAction($event)">
+                </ng2-smart-table>
+            </div>
         </div>
     </div>
 </div>
