--- a/src/app/jobs/jobs-list/view/view.component.html
+++ b/src/app/jobs/jobs-list/view/view.component.html
@@ -35,9 +35,12 @@
     </div>
     <div class="col-md-9">
         <div class="text-top">
-            <h3> <b>Applications</b></h3>
+            <h4> <b>Interviews and Applications</b></h4>
         </div>
         <mat-tab-group mat-stretch-tabs class="example-stretched-tabs mat-elevation-z1">
+            <mat-tab label="INTERVIEWS">
+                <app-interview-in-job></app-interview-in-job>
+            </mat-tab>
             <mat-tab label="NEW APPLICATIONS">
                 <app-list-applicants></app-list-applicants>
             </mat-tab>
