--- a/src/app/interviews/available-interviews/view/view.component.html
+++ b/src/app/interviews/available-interviews/view/view.component.html
@@ -3,7 +3,6 @@
 <app-view-interview-details></app-view-interview-details>
     </div>
     <div class="col-md-9">
-      
           <br>
           <mat-tab-group mat-stretch-tabs class="example-stretched-tabs mat-elevation-z1">
           
@@ -16,10 +15,9 @@
             <mat-tab label="STAGES">
                 <app-interview-stages></app-interview-stages>
             </mat-tab>
-            <mat-tab label="JOB LISTING">
+            <!-- <mat-tab label="JOB LISTING">
                 <app-job-listing></app-job-listing>
-            </mat-tab>
-           
+            </mat-tab> -->
           </mat-tab-group>
     </div>
     
