--- a/src/app/interviews/create-interview/interview-components/interview-details/interview-details.component.html
+++ b/src/app/interviews/create-interview/interview-components/interview-details/interview-details.component.html
@@ -2,8 +2,9 @@
     <mat-horizontal-stepper labelPosition="bottom" #stepper>
         <mat-step>
             <h4 class="title"><small><b>{{title}}</b></small></h4>
-            <form class="form" [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
-                <!-- <div class="row"></div> -->
+            <hr>
+            <form class="form" [formGroup]="form">
+                <div *ngIf="errorMessage" class="alert alert-danger">{{ errorMessage }}</div>
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
@@ -15,7 +16,6 @@
                                 required</small>
                         </div>
                     </div>
-                   
                 </div>
                 <div class="row">
                     <div class="col-md-6">
@@ -44,18 +44,18 @@
                     </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-12">
-                    <mat-form-field>
-                        <mat-label>Select interview date and time</mat-label>
-                                    <input matInput [ngxMatDatetimePicker]="picker" placeholder="Interview date" formControlName="start_date"
-                          [min]="minDate" [max]="maxDate" [disabled]="disabled">
-                                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                                    <ngx-mat-datetime-picker #picker [showSpinners]="showSpinners" [showSeconds]="showSeconds"
-                                        [stepHour]="stepHour" [stepMinute]="stepMinute" [stepSecond]="stepSecond"
-                                        [touchUi]="touchUi" [color]="color" [enableMeridian]="enableMeridian">
-                                    </ngx-mat-datetime-picker>
-                                </mat-form-field>
-                  </div>
+                    <div class="col-md-12">
+                        <mat-form-field>
+                            <mat-label>Select interview date and time</mat-label>
+                            <input matInput [ngxMatDatetimePicker]="picker" placeholder="Interview date"
+                                formControlName="start_date" [min]="minDate" [max]="maxDate" readonly>
+                            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                            <ngx-mat-datetime-picker #picker [showSpinners]="showSpinners" [showSeconds]="showSeconds"
+                                [stepHour]="stepHour" [stepMinute]="stepMinute" [stepSecond]="stepSecond"
+                                [touchUi]="touchUi" [color]="color" [enableMeridian]="enableMeridian">
+                            </ngx-mat-datetime-picker>
+                        </mat-form-field>
+                    </div>
                 </div>
                 <div class="form-group">
                     <textarea type="text" placeholder="Description" class="form-control" formControlName="description"
@@ -67,12 +67,14 @@
                     <br>
                     <div class="form-group">
                         <section class="example-section">
-                            <mat-checkbox color="primary" *ngIf="form.valid && _data.mode" (change)="toggleJobListing($event)"
-                                class="example-margin">Add job listing to this interview ?
+                            <mat-checkbox color="primary" *ngIf="form.valid && _data.mode"
+                                (change)="toggleJobListing($event)" class="example-margin">Add job listing to this
+                                interview ?
                             </mat-checkbox>
-                            <mat-checkbox color="primary" *ngIf="form.valid && !_data.mode" (change)="toggleJobListingEdit($event)"
-                                class="example-margin">Edit job listing to this interview ?
-                            </mat-checkbox>
+                            <!-- <mat-checkbox color="primary" *ngIf="form.valid && !_data.mode"
+                                (change)="toggleJobListingEdit($event)" class="example-margin">Edit job listing to this
+                                interview ?
+                            </mat-checkbox> -->
                         </section>
                     </div>
                     <!-- <div class="form-group">
@@ -89,27 +91,25 @@
                             class="btn-defaul pull-left">Cancel</button>
                     </div>
                     <div class="col-md-6">
-                        <button mat-raised-button type="submit" *ngIf="!add_listing_option && _data.mode"
+                        <button mat-raised-button type="submit" (click)="createInterview(form.value)" *ngIf="!add_listing_option && _data.mode"
                             class="btn-default btn-submits pull-right">Submit</button>
                         <button mat-raised-button type="submit" *ngIf="add_listing_option && _data.mode"
-                            class="btn-default btn-submits pull-right" matStepperNext>Next <i  class="fa fa-arrow-right"></i></button>
-                       
-                        <button mat-raised-button type="button" *ngIf="!_data.mode &&  edit_listing_option"
-                            class="btn-default btn-submits pull-right"  matStepperNext>Update Job <i  class="fa fa-arrow-right"></i></button>
-                            <button mat-raised-button type="submit" *ngIf="!_data.mode && !edit_listing_option"
+                            class="btn-default btn-submits pull-right" matStepperNext>Next <i
+                                class="fa fa-arrow-right"></i></button>
+                        <button mat-raised-button type="button" *ngIf="!_data.mode &&  valid_interview"
+                            class="btn-default btn-submits pull-right" matStepperNext>Update Job <i
+                                class="fa fa-arrow-right"></i></button>
+                        <button mat-raised-button type="submit" (click)="editInterview()" *ngIf="!_data.mode && !valid_interview"
                             class="btn-default btn-submits pull-right">Done</button>
                     </div>
-                 
                 </div>
-
-
-               
             </form>
         </mat-step>
         <mat-step>
             <h5><b>{{sec_title}}</b></h5>
-            <div *ngIf="errorMessage" class="alert alert-danger">{{ errorMessage }}</div>
+         
             <form [formGroup]="jobForm">
+                <div *ngIf="jobErrorMessage" class="alert alert-danger">{{ jobErrorMessage }}</div>
                 <div class="row">
                     <div class="col-4">
                         <div class="form-group">
@@ -144,10 +144,11 @@
                             </div> -->
                             <mat-form-field>
                                 <mat-label>set application end date</mat-label>
-                                <input [min]="minDate" [max]="maxDate" formControlName="application_end_date" matInput [matDatepicker]="dp3">
+                                <input [min]="minDate" [max]="maxDate" formControlName="application_end_date" matInput
+                                    [matDatepicker]="dp3">
                                 <mat-datepicker-toggle matSuffix [for]="dp3"></mat-datepicker-toggle>
                                 <mat-datepicker #dp3 disabled="false"></mat-datepicker>
-                              </mat-form-field>
+                            </mat-form-field>
                         </div>
                     </div>
                     <div class="col-4">
@@ -212,7 +213,7 @@
                                 required</small>
                         </div>
                     </div>
-                    <div class="col-12">
+                    <div class="col-6">
                         <div class="form-group">
                             <label for="">Job qualifications</label>
                             <textarea type="text" placeholder="Job qualifications" class="form-control"
@@ -222,42 +223,71 @@
                                 is
                                 required</small>
                         </div>
-                        <br>
-                    </div>
-                    <div class="col-12">
                         <label for="">Job description</label>
                         <div class="form-group">
                             <textarea placeholder="Describe job" class="form-control" formControlName="description">
                             </textarea>
                         </div>
+                    </div>
+                    <div class="col-3">
+                        <label for=""><b>Select details required</b></label>
+                        <mat-checkbox [ngModelOptions]="{standalone: true}" class="example-margin"
+                            [(ngModel)]="request_education_details">Education</mat-checkbox> <br>
+                        <mat-checkbox [ngModelOptions]="{standalone: true}" class="example-margin"
+                            [(ngModel)]="request_cv">CV</mat-checkbox>
+                        <mat-checkbox [ngModelOptions]="{standalone: true}" class="example-margin"
+                            [(ngModel)]="request_apprenticeship">Apprenticeship</mat-checkbox>
+                        <mat-checkbox [ngModelOptions]="{standalone: true}" class="example-margin"
+                            [(ngModel)]="request_scholarship">Scholarship</mat-checkbox>
 
                     </div>
-                    <div class="col-12">
+                    <div class="col-md-3">
+                        <br>
+                        <mat-checkbox [ngModelOptions]="{standalone: true}" class="example-margin"
+                            [(ngModel)]="request_guardian_details">Guardian</mat-checkbox>
+                        <mat-checkbox [ngModelOptions]="{standalone: true}" class="example-margin"
+                            [(ngModel)]="request_business_details">Business</mat-checkbox>
+                        <mat-checkbox [ngModelOptions]="{standalone: true}" class="example-margin"
+                            [(ngModel)]="request_siblings_details">Siblings</mat-checkbox>
+                        <mat-checkbox [ngModelOptions]="{standalone: true}" class="example-margin"
+                            [(ngModel)]="request_extra_documents">Extra documents</mat-checkbox>
+                        <mat-checkbox [ngModelOptions]="{standalone: true}" class="example-margin"
+                            [(ngModel)]="request_residence_details">Residence</mat-checkbox>
+                    </div>
+                    <div class="col-md-6">
                         <div style="text-align:center">
-                            <div [innerHtml]='msg' *ngIf="msg" style="color: red;"></div>
-                            <div>
-                                {{url}}
-                                <!-- <img width="150" height="100" [src]="url" *ngIf="url">-->
-                                </div> 
+                        
                             <p>
-                              <button type="button" mat-raised-button class="btn-default"
-                                (click)="fileInput.click()">
-                                <span>Add picture</span>
-                                <input #fileInput type="file" (change)="selectFile($event)"
-                                  hidden>
-                              </button>
+                                <button type="button" mat-raised-button class="btn-default btn-submits btn-block btn-sm"
+                                    (click)="fileInput.click()">
+                                    <span><i class="fa fa-upload"></i> Add picture</span>
+                                    <!-- <input #fileInput type="file" (change)="selectFile($event)" hidden> -->
+                                </button>
                             </p>
-                          </div>
+                        </div>
+                        <input #fileInput type="file" accept="image/*" (change)="showPreview($event)" hidden />
+
+                        <!-- Image Preview -->
+                       <div class="imagePreview" *ngIf="imageURL && imageURL !== ''">
+                         <img width="120px" [src]="imageURL">
+                       </div>
 
                     </div>
+                    <div class="col-md-2">
+
+                    </div>
+                    <div class="col-md-4"></div>
+
                 </div>
-                <button mat-raised-button type="button"  (click)="editInterview()"  *ngIf="!_data.mode"
-                class="btn-default btn-submits pull-right">Save changes</button>
+                <!-- <button mat-raised-button type="button" (click)="editInterview()" *ngIf="!_data.mode"
+                    class="btn-default btn-submits pull-right">Save changes</button> -->
             </form>
             <button mat-raised-button matStepperPrevious>Back</button>
             <button mat-raised-button (click)="submitInterviewJob()" *ngIf="add_listing_option  && _data.mode"
                 class="btn-default btn-submits pull-right">Submit</button>
-            
+            <button mat-raised-button (click)="submitInterviewJob()" *ngIf="!_data.mode"
+                class="btn-default btn-submits pull-right">Save</button>
+
         </mat-step>
     </mat-horizontal-stepper>
 </div>
